--- a/styl.css
+++ b/styl.css
@@ -492,6 +492,7 @@ a
     padding: 5rem;
     margin: 10rem auto;
     gap:30px;
+    /* flex-wrap: wrap; */
 }
 
 .skill-container-left
@@ -499,6 +500,7 @@ a
     width:50%;
     display:flex;
     flex-direction: column;
+    
 }
 
 .skill-container-right
@@ -732,9 +734,9 @@ gap: 1rem;
     display: none;
     position: absolute;
     top:0.5rem;
-    right:0.5rem;
+    right:0;
     border: 1px solid black;
-    width: 35%;
+    width: 50%;
     height: 100vh;
     z-index: 1000;
     padding-top: 2rem;
@@ -772,9 +774,139 @@ gap: 1rem;
     transition:0.8s;
     font-weight: bold;
 }
+.swal
+{
+    width: 45%;
+    height: 40%;
+    padding: 7px 19px;
+    position: relative;
+}
+
+.swal-button {
+    padding: 7px 19px;
+    background-color: #4962B3;
+    font-size: 12px;
+    border: 1px solid #3e549a;
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
+    width: 4rem;
+    position: absolute;
+    bottom: -2rem;
+    right: 0;
+  }
+  
+  .swal-text
+  {
+    color: black;
+  }
+
+  .swal-title
+  {
+    color: red;
+    font-size: 40px;
+
+  }
+
+@media (max-width:679px)
+{
+   
+    footer
+    {
+        padding-left: 0;
+        margin: 0;
+    
+    }
+   
+    .footer-wrapper{
+        padding-left: 0.39rem;
+        align-items:center ;
+
+    }
+    .footer-faded-text
+    {
+        top:0;
+        left: 0;
+        font-size: 40px;
+    }
+    .hero-section-sub-heading
+    {
+        width: 100vw;
+    }
+    .hero-section-description
+    {
+        width: 100vw;
+        word-wrap: break-word;
+    }
+
+    .formfield
+    {
+        width: 70%;
+        
+    }
+    .contactus-heading
+    {
+        margin-left: 4rem;
+        font-size: 3em;
+
+    }
+    .contactus-subHeading
+    {
+        margin-left: 4rem;
+        font-size: 1em;
+        width: 100vw;
+        word-wrap: break-word;
+    }
+    .hero-section-description
+    {
+        font-size: 1rem;
+        white-space: normal;
+           
+    }
+    
+    #skills
+    {
+        display: flex;
+        flex-direction: column;
+        /* width:350px; */
+        margin: 0;
+        padding-top: 1rem;
+        padding-left: 0.5rem;
+        padding-bottom: 0;
+        /* padding-right: 1rem; */
+    }
+    .skill-container-right
+    {
+       width: 100vw;
+    }
+    .skill-container-left
+    {
+        width: 100vw;
+        word-wrap: break-word;
+    }
+    .swal
+    {
+    width: 45%;
+    height: 55%;
+    
+    }
+    .swal-text
+    {
+        font-size: 12px;
+    }
+    .swal-title
+
+    {
+        font-size: 15px;
+        margin-bottom: 0.1rem;
+    }
+}
 
 @media (max-width:1207px)
 {
+    /* .skill-subHeading
+    {
+        width:50%;
+    } */
+    
     .hero-section
     {
         flex-direction: column;
@@ -859,7 +991,7 @@ gap: 1rem;
     }
     .project-card:hover .project-number-left
     {
-        left: 1rem;
+        left: 0.1rem;
         
     }
     .project-card:hover .project-content
@@ -891,48 +1023,7 @@ gap: 1rem;
     {
         display: block;
     }
-}
-
-
-.swal
-{
-    width: 45%;
-    height: 40%;
-    padding: 7px 19px;
-}
-
-.swal-button {
-    padding: 7px 19px;
-    background-color: #4962B3;
-    font-size: 12px;
-    border: 1px solid #3e549a;
-    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.3);
-    width: 4rem;
-  }
-  
-  .swal-text
-  {
-    color: black;
-  }
-
-  .swal-title
-  {
-    color: red;
-    font-size: 40px;
-  }
-
-@media (max-width:679px)
-{
     
-    .hero-section-description
-    {
-        font-size: 1rem;
-        white-space: normal;
-           
-    }
-    #skills
-    {
-        display: flex;
-        flex-direction: column;
-    }
 }
+
+
