--- a/styl.css
+++ b/styl.css
@@ -815,8 +815,16 @@ gap: 1rem;
         margin: 0;
     
     }
-   
+   .link-wrapper
+   {
+    gap: 0.2rem;
+   }
+   .icon-wrapper
+   {
+    gap: 0.2rem;
+   }
     .footer-wrapper{
+        
         padding-left: 0.39rem;
         align-items:center ;
 
